Chessboard: fix page height on mobile devices

--- a/02.Chessboard/styles.css
+++ b/02.Chessboard/styles.css
@@ -21,12 +21,15 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 20px 0;
-  height: 100vh;
   border: 5px solid black;
   background-color: var(--background);
   margin: 0;
